# clinical-health-app

./: CLAUDE.md  LICENSE
backend/: .gitignore  PLANO.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_doctors_and_addresses_tables.py  0002_update_speciality_enum_to_english.py
backend/app/: main.py
backend/app/api/: doctor.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/models/: address.py  doctor.py  enums.py
backend/app/repositories/: doctor_repository.py
backend/app/schemas/: doctor_schema.py  shared.py
backend/app/services/: doctor_service.py
backend/clinical_health_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/unit/: test_doctor_service.py  test_schemas.py
