[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-health-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn==0.49.0",
    "sqlalchemy==2.0.51",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-dotenv==1.2.2",
    "psycopg2-binary==2.9.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pyright]
include = ["app"]
pythonVersion = "3.11"

[tool.pytest.ini_options]
asyncio_mode= "auto"
markers = [
    "integration: tests that require a running PostgreSQL database"
]
